# vscge

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build-cmake.yml  build.yml  build_windows.yml  greetings.yml
cmake/: GetGl3w.cmake  GetGoogleTest.cmake  VSCGEAddExtern.cmake  VSCGEModuleCommon.cmake  VSCGEModules.cmake  VSCGEStaticAnalyzers.cmake  VSCGEUtils.cmake  VSCGEVersion.cmake
examples/: CMakeLists.txt  game_of_life.cc
examples/windows/: blank_window.cc  cube.cc  triangle.cc
examples/windows_console/: game_of_life.cc
graphviz/: vscge.dot
include/vscge/: version.h  vscge.h
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/vscge/core/: application.h  entry_point.h  renderer.h  shader.h  short_types.h  timer.h  types.h  vertex.h  window.h
modules/core/src/: application.cc  renderer.cc  shader.cc  timer.cc
modules/core/src/platform/windows/: window.cc
modules/core/src/platform/windows_console/: renderer.cc  window.cc
modules/debug/: CMakeLists.txt
modules/debug/include/vscge/debug/: debug.h
modules/debug/src/: debug.cc
modules/event/: CMakeLists.txt
modules/event/include/vscge/event/: base_event.h  key_event.h  mouse_event.h
modules/graphics/: CMakeLists.txt
modules/graphics/include/vscge/graphics/: data_type.h  index_buffer.h  shader.h  vertex.h  vertex_array.h  vertex_buffer.h
modules/graphics/include/vscge/graphics/detail/: class_helper.h
modules/graphics/src/: index_buffer.cc  renderer.cc  shader.cc  vertex_array.cc  vertex_buffer.cc
modules/instrumentation/: CMakeLists.txt
modules/instrumentation/include/vscge/instrumentation/: memory.h  profiler.h
modules/logger/: CMakeLists.txt
modules/logger/include/vscge/logger/: logger.h  tee.h
modules/logger/src/: logger_entry_point.cc  tee.cc
modules/logger/src/platform/windows/: logger.cc
modules/math/: CMakeLists.txt
modules/math/include/vscge/math/: matrix.h  transform.h  vector.h
modules/math/include/vscge/math/detail/: swizzle.h  swizzle_vec1.inc  swizzle_vec2.inc  swizzle_vec3.inc
modules/math/test/: CMakeLists.txt  swizzle_test.cc  transform_test.cc  util.h  vector_test.cc
modules/memory/: CMakeLists.txt
modules/memory/include/vscge/memory/: reference.h
modules/misc/include/vscge/: api.h
modules/util/: CMakeLists.txt
modules/util/include/vscge/util/: macro.h
tests/: CMakeLists.txt
tool/: swizzle_include_generator.py
vscge/: CMakeLists.txt
vscge/example/: CMakeLists.txt  game_of_life.cc  maze.cc
vscge/include/vscge/: application.h  version.h  vscge.h
vscge/include/vscge/core/: application.h  consts.h  core.h  entry_point.h  renderer.h  timer.h  types.h  window.h
vscge/include/vscge/debug/: debug.h
vscge/include/vscge/event/: base_event.h  event.h  key_event.h  mouse_event.h
vscge/include/vscge/instrumentation/: memory.h  profiler.h
vscge/include/vscge/logger/: logger.h  tee.h
vscge/include/vscge/math/: matrix.h  vector.h
vscge/include/vscge/math/detail/: swizzle.h  swizzle_vec4.inc
vscge/include/vscge/memory/: memory.h
vscge/include/vscge/profiler/: profiler.h
vscge/include/vscge/util/: conversions.h  macro.h
vscge/include/vscge/utils/: conversions.h
vscge/src/: application.cc
vscge/src/core/: application.cc  renderer.cc  timer.cc
vscge/src/debug/: debug.cc
vscge/src/instrumentation/: profiler.cc
vscge/src/logger/: logger.cc  logger_entry_point.cc
vscge/src/platform/windows/: CMakeLists.txt  entry_point.cc
vscge/src/platform/windows/core/: entry_point.cc  types.cc  window.cc
vscge/src/platform/windows/event/: key_event.cc
vscge/src/platform/windows/logger/: logger.cc
vscge/src/platform/windows_console/: entry_point.cc
vscge/src/platform/windows_console/core/: entry_point.cc  types.cc  window.cc
vscge/src/profiler/: profiler.cc
vscge/src/utils/: conversions.cc
vscge/test/: CMakeLists.txt  gtest_test.cc  swizzle_test.cc  test_gtest.cc  test_swizzle.cc  test_vector.cc  vector_test.cc
